# server-manager-gui

./: CMakeLists.txt  README.md
bash_scripts/: remove_package.sh
servers/: proftpd.cpp  proftpd.txt
servers/bind9/: basic_informations.txt
servers/bind9/standard_scirpts/: check_if_installed.sh
servers/proftpd/standard_scirpts/: check_if_installed.sh
src/: config.cpp  main.cpp  options.cpp  servers.cpp  utils.cpp
theme/: main.ui  options.ui  theme.css  theme_dark.css  theme_light.css
